# music-catalog

./: .gitmodules  Album.cpp  Album.h  AlbumFactory.cpp  AlbumFactory.h  AlbumStudio.cpp  AlbumStudio.h  Artist.cpp  Artist.h  CMakeLists.txt  Compilatie.cpp  Compilatie.h  Exception.cpp  Exception.h  GlobalShuffle.cpp  GlobalShuffle.h  Melodie.cpp  Melodie.h  README.md  SDLWrapper.cpp  SDLWrapper.h  main.cpp  tempPrint.cpp  tempPrint.h
.github/workflows/: main.yml
